fix: spacing and font sizes

--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,10 @@ h1,h2,h5{
     font-weight: 500;
 }
 
+h1{
+    font-size: 1.8rem;
+}
+
 .navbar-brand, .logo{
     font-family: "Press Start 2P", system-ui;
 }
@@ -31,6 +35,10 @@ h2,h5{
     border: none;
     font-weight: 700;
     border-radius: 0;
+}
+
+a{
+    text-decoration: none;
 }
 
 .card{
